# Precompiled_tensorflow

.github/workflows/: build-x86_64.yml  build-x86_64_linux_avx2.yml  build-x86_64_linux_generic.yml  build-x86_64_windows_generic.yml
cmake/: CMakeLists.txt
